--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SaaS Landing Page</title>
     <script src="https://kit.fontawesome.com/c429e89fa6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
 
         <!-- Header Section -->
-        <header class="navbar">
+        <header class="navbar" id="header">
             <div class="logo">
                 <a href="#">TechVantage</a>
             </div>
@@ -346,5 +346,21 @@
             </div>
         </footer>           <!-- Footer Section End-->
     </div>
+
+    <script>
+        window.onscroll = function() {myFunction()};
+        
+        var navbar = document.getElementById("header");
+        var sticky = header.offsetTop;
+        
+        function myFunction() {
+          if (window.pageYOffset > sticky) {
+            header.classList.add("sticky");
+          } else {
+            header.classList.remove("sticky");
+          }
+        }
+    </script>
+
 </body>
 </html>
