--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <div class="menu">
                 <ul>
-                    <a href="#"><li>Product</li></a>
-                    <a href="#"><li>Solutions</li></a>
-                    <a href="#"><li>Resources</li></a>
+                    <a href="#featuresSection"><li>Product</li></a>
+                    <a href="#integration"><li>Solutions</li></a>
+                    <a href="#resourcesSection"><li>Resources</li></a>
                     <a href="#"><li>Pricing</li></a>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
 
 
             <!-- Features Section -->
-            <div class="featuresSection">
+            <div class="featuresSection" id="featuresSection">
                 <div class="featureText">
                     <h2>Streamline Your Workflow with TechVantage</h2>
                     <p>TechVantage is a cutting-edge SaaS solution designed to revolutionize the way businesses operate. Our powerful platform empowers you to streamline your workflow, optimize collaboration, and drive productivity. Experience the future of work with TechVantage.</p>
@@ -132,7 +132,7 @@
 
 
             <!-- Integration Section -->
-            <div class="integration">
+            <div class="integration" id="integration">
                 <div class="singleIntegration">
                     <div class="leftIntegration">
                         <h1>Seamless Software Integrations</h1>
@@ -223,7 +223,7 @@
 
 
             <!-- Resources Section -->
-            <div class="resourcesSection">
+            <div class="resourcesSection" id="resourcesSection">
                 <h1>Empower Your Business with Free Resources</h1>
                 <div class="resources">
                     <div class="singleResources">
